test/tests/stages/15_arrays_and_pointer_arithmetic/valid/libraries/global_array.lex
-- Lexing ... OK
+
+
@@ Tokens @@
List[57]:
  long
  identifier(arr)
  [
  const int(4)
  ]
  =
  {
  const int(1)
  ,
  const int(2)
  ,
  const int(3)
  ,
  const int(4)
  }
  ;
  int
  identifier(double_each_element)
  (
  void
  )
  {
  for
  (
  int
  identifier(i)
  =
  const int(0)
  ;
  identifier(i)
  <
  const int(4)
  ;
  identifier(i)
  =
  identifier(i)
  +
  const int(1)
  )
  {
  identifier(arr)
  [
  identifier(i)
  ]
  =
  identifier(arr)
  [
  identifier(i)
  ]
  *
  const int(2)
  ;
  }
  return
  const int(0)
  ;
  }
