test/tests/stages/15_arrays_and_pointer_arithmetic/invalid_types/extra_credit/compound_sub_pointer_from_int.lex
-- Lexing ... OK
+
+
@@ Tokens @@
List[41]:
  int
  identifier(main)
  (
  void
  )
  {
  int
  identifier(arr)
  [
  const int(3)
  ]
  =
  {
  const int(1)
  ,
  const int(2)
  ,
  const int(3)
  }
  ;
  int
  *
  identifier(elem)
  =
  identifier(arr)
  +
  const int(1)
  ;
  int
  identifier(i)
  =
  const int(0)
  ;
  identifier(i)
  -=
  identifier(elem)
  ;
  return
  const int(0)
  ;
  }
